<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv_n1"
        android:layout_width="138dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:text="@string/tv_n1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_n2"
        android:layout_width="138dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/tv_n2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_n1" />

    <TextView
        android:id="@+id/tv_solution"
        android:layout_width="325dp"
        android:layout_height="91dp"
        android:layout_marginTop="76dp"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_n2" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:onClick="Add"
        android:text="@string/btn_add"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_solution" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="16dp"
        android:onClick="Sub"
        android:text="@string/btn_sub"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:onClick="Mul"
        android:text="@string/btn_mul"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="16dp"
        android:onClick="Div"
        android:text="@string/btn_div"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/btn_mul" />

    <EditText
        android:id="@+id/et_n1"
        android:layout_width="190dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/et_n1"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_n1"
        app:layout_constraintStart_toEndOf="@+id/tv_n1" />

    <EditText
        android:id="@+id/et_n2"
        android:layout_width="196dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/et_n2"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_n2"
        app:layout_constraintStart_toEndOf="@+id/tv_n2" />
</androidx.constraintlayout.widget.ConstraintLayout>